examples/test/testpolicy11081.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11081
  namespace: namespace405
spec:
  podSelector:
    matchLabels:
      key45: value19
      key40: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value47
          key12: value31
          key3: value30
      podSelector:
        matchLabels:
          key43: value11
